# offscreen_rendering

./: CMakeLists.txt  README.md  main.cpp  main.qml
